# kedro_prefect

./: Dockerfile  README.md  docker-compose.yml  flows.py  prefect.yml  pyproject.toml  register_prefect_flow.py  requirements.txt  session_store.db  start.sh  stats.json
.github/workflows/: deploy.yml  publish.yml
conf/base/: catalog.yml  parameters_multiply_pipeline.yml
docs/source/: conf.py  index.rst
prefect_deploy/: prefect.yml
src/kedro_prefect/: __init__.py  __main__.py  settings.py
src/kedro_prefect/pipelines/multiply_pipeline/: __init__.py  nodes.py  pipeline.py
src/tests/pipelines/multiply_pipeline/: test_pipeline.py
tests/: test_run.py
