[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "kedro_prefect"
readme = "README.md"
dynamic = ["dependencies", "version"]

[project.scripts]
kedro-prefect = "kedro_prefect.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.18.0",
    "sphinx~=3.4.3",
    "sphinx_rtd_theme==0.5.1",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.11.1",
    "sphinx_copybutton==0.3.1",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.1.0",
    "myst-parser~=0.17.2",
]

[tool.kedro]
package_name = "kedro_prefect"
project_name = "kedro_prefect"
kedro_init_version = "0.19.3"
tools = ['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure', 'PySpark', 'Kedro Viz']
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/kedro_prefect -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.poetry]
name = "kedro-prefect"
version = "0.1.0"
description = ""
authors = ["Oleg Podlipalin <backspace.by@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
aiobotocore = "^2.12.1"
aiofiles = "^23.2.1"
aiohttp = "^3.9.3"
aioitertools = "^0.11.0"
aiosignal = "^1.3.1"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
annotated-types = "^0.6.0"
antlr4-python3-runtime = "^4.9.3"
anyio = "^3.7.1"
appnope = "^0.1.4"
apprise = "^1.7.4"
argon2-cffi = "^23.1.0"
argon2-cffi-bindings = "^21.2.0"
arrow = "^1.3.0"
asgi-lifespan = "^2.1.0"
asttokens = "^2.4.1"
async-lru = "^2.0.4"
async-timeout = "^4.0.3"
asyncpg = "^0.29.0"
attrs = "^23.2.0"
babel = "^2.14.0"
beautifulsoup4 = "^4.12.3"
binaryornot = "^0.4.4"
bleach = "^6.1.0"
botocore = "^1.34.51"
build = "^1.1.1"
cachetools = "^5.3.3"
certifi = "^2024.2.2"
cffi = "^1.16.0"
chardet = "^5.2.0"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
cloudpickle = "^3.0.0"
colorama = "^0.4.6"
comm = "^0.2.2"
cookiecutter = "^2.6.0"
coolname = "^2.2.0"
coverage = "^7.4.4"
cramjam = "^2.8.2"
croniter = "^2.0.3"
cryptography = "^42.0.5"
dateparser = "^1.2.0"
debugpy = "^1.8.1"
decorator = "^5.1.1"
defusedxml = "^0.7.1"
dnspython = "^2.6.1"
docker = "^6.1.3"
dynaconf = "^3.2.5"
email-validator = "^2.1.1"
exceptiongroup = "^1.2.0"
executing = "^2.0.1"
fastapi = "^0.110.0"
fastjsonschema = "^2.19.1"
fastparquet = "^2024.2.0"
fqdn = "^1.5.1"
frozenlist = "^1.4.1"
fsspec = "^2024.3.1"
gitdb = "^4.0.11"
gitpython = "^3.1.42"
google-auth = "^2.28.2"
graphql-core = "^3.2.3"
graphviz = "^0.20.2"
greenlet = "^3.0.3"
griffe = "^0.42.1"
h11 = "^0.14.0"
h2 = "^4.1.0"
hpack = "^4.0.0"
httpcore = "^1.0.4"
httptools = "^0.6.1"
httpx = "^0.27.0"
hyperframe = "^6.0.1"
idna = "^3.6"
importlib-metadata = "^7.0.2"
importlib-resources = "^6.1.3"
iniconfig = "^2.0.0"
ipykernel = "^6.29.3"
ipython = "^8.22.2"
isoduration = "^20.11.0"
itsdangerous = "^2.1.2"
jedi = "^0.19.1"
jinja2 = "^3.1.3"
jmespath = "^1.0.1"
json5 = "^0.9.24"
jsonpatch = "^1.33"
jsonpointer = "^2.4"
jsonschema = "^4.21.1"
jsonschema-specifications = "^2023.12.1"
jupyter-events = "^0.10.0"
jupyter-lsp = "^2.2.4"
jupyter-client = "^8.6.1"
jupyter-core = "^5.7.2"
jupyter-server = "^2.13.0"
jupyter-server-terminals = "^0.5.3"
jupyterlab = "^4.1.5"
jupyterlab-pygments = "^0.3.0"
jupyterlab-server = "^2.25.4"
kedro = "^0.19.3"
kedro-datasets = "^2.1.0"
kedro-telemetry = "^0.3.2"
kubernetes = "^29.0.0"
lazy-loader = "^0.3"
mako = "^1.3.2"
markdown = "^3.6"
markdown-it-py = "^3.0.0"
markupsafe = "^2.1.5"
matplotlib-inline = "^0.1.6"
mdurl = "^0.1.2"
mistune = "^3.0.2"
more-itertools = "^10.2.0"
multidict = "^6.0.5"
nbclient = "^0.10.0"
nbconvert = "^7.16.2"
nbformat = "^5.10.3"
nest-asyncio = "^1.6.0"
networkx = "^3.2.1"
notebook = "^7.1.2"
notebook-shim = "^0.2.4"
numpy = "^1.26.4"
oauthlib = "^3.2.2"
omegaconf = "^2.3.0"
overrides = "^7.7.0"
packaging = "^23.2"
pandas = "^2.2.1"
pandocfilters = "^1.5.1"
parse = "^1.20.1"
parso = "^0.8.3"
pathspec = "^0.12.1"
pendulum = "^2.1.2"
pexpect = "^4.9.0"
platformdirs = "^4.2.0"
plotly = "^5.20.0"
pluggy = "^1.3.0"
pre-commit-hooks = "^4.5.0"
prometheus-client = "^0.20.0"
prompt-toolkit = "^3.0.43"
psutil = "^5.9.8"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.2"
pyarrow = "^15.0.2"
pyasn1 = "^0.5.1"
pyasn1-modules = "^0.3.0"
pycparser = "^2.21"
pydantic = "^2.6.4"
pydantic-core = "^2.16.3"
pygments = "^2.17.2"
pyproject-hooks = "^1.0.0"
pytest = "^7.4.4"
pytest-cov = "^3.0.0"
pytest-mock = "^1.13.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
python-json-logger = "^2.0.7"
python-multipart = "^0.0.9"
python-slugify = "^8.0.4"
pytoolconfig = "^1.3.1"
pytz = "^2024.1"
pytzdata = "^2020.1"
pyyaml = "^6.0.1"
pyzmq = "^25.1.2"
readchar = "^4.0.6"
referencing = "^0.34.0"
regex = "^2023.12.25"
requests = "^2.31.0"
requests-oauthlib = "^1.4.0"
rfc3339-validator = "^0.1.4"
rfc3986-validator = "^0.1.1"
rich = "^13.7.1"
rope = "^1.12.0"
rpds-py = "^0.18.0"
rsa = "^4.9"
ruamel-yaml = "^0.18.6"
ruamel-yaml-clib = "^0.2.8"
ruff = "^0.1.15"
s3fs = "^2024.3.1"
secure = "^0.3.0"
send2trash = "^1.8.2"
six = "^1.16.0"
smmap = "^5.0.1"
sniffio = "^1.3.1"
soupsieve = "^2.5"
sqlalchemy = "^2.0.28"
stack-data = "^0.6.3"
starlette = "^0.36.3"
strawberry-graphql = "^0.220.0"
tenacity = "^8.2.3"
terminado = "^0.18.1"
text-unidecode = "^1.3"
tinycss2 = "^1.2.1"
toml = "^0.10.2"
tomli = "^2.0.1"
toposort = "^1.10"
tornado = "^6.4"
traitlets = "^5.14.2"
typer = "^0.9.0"
types-python-dateutil = "^2.9.0.20240316"
typing-extensions = "^4.10.0"
tzdata = "^2024.1"
tzlocal = "^5.2"
ujson = "^5.9.0"
uri-template = "^1.3.0"
urllib3 = "^2.0.7"
uvicorn = "^0.27.1"
uvloop = "^0.19.0"
watchfiles = "^0.21.0"
watchgod = "^0.8.2"
wcwidth = "^0.2.13"
webcolors = "^1.13"
webencodings = "^0.5.1"
websocket-client = "^1.7.0"
websockets = "^12.0"
wrapt = "^1.16.0"
yarl = "^1.9.4"
zipp = "^3.18.1"
